--- a/styles/_site-wide.scss
+++ b/styles/_site-wide.scss
@@ -5,8 +5,11 @@ body {
   color: $white;
   padding: 0;
   margin: 0;
-  position: absolute;
-  top: 0px;
+  // position: absolute;
+  // top: 0px;
+  // left: 0;
+  // right: 0;
+  // width: 100%;
 }
 
 // canvas {
@@ -235,6 +238,18 @@ div.button p {
 // Flex classes
 .flex-container {
   display: flex;
+}
+
+.just-flex-end {
+  justify-content: flex-end;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.align-items-base {
+  align-items: baseline;
 }
 
 .flex-col-nw {
